# DSPNETOWORK2

./: .gitignore  Cargo.toml  Dockerfile  alice-public.key  bob-public.key  build-server.sh  deploy-server.sh  docker-compose.yml  docker-ts.sh  fix-sqlx-offline.sh  rebuild-server.sh  setup-db-scripts.sh  setup-sqlx-offline.sh  sqlx-data-gen.sh
server/: .env  Cargo.toml  Dockerfile  build-offline.sh  build-server.sh  build.sh  dataBaseInit.sh  docker-compose.yml  fix-database.sh  fix-sqlx-build.sh  prepare-sqlx.sh  setup-sqlx-offline.sh  sqlx-data.json
server/.cargo/: config.toml
server/server/: build-offline.sh  sqlx-data.json
server/server/sql/: init.sql
server/sql/: complete-schema-fix.sql  init.sql  schema_fixes.sql
server/src/: auth.rs  db.rs  error.rs  lib.rs  main.rs  message.rs  models.rs  topic.rs
server/src/api/: auth.rs  messages.rs  mod.rs  prekeys.rs  topics.rs
src/: main.rs
src/cli/commands/: connect.rs  keygen.rs  mod.rs  msg.rs  peer.rs  status.rs  topic.rs  topics.rs
src/crypto/: double_ratchet.rs  e2ee.rs  keys.rs  kyber.rs  mod.rs  ratchet.rs
src/network/: connection.rs
src/storage/: config.rs
src/utils/: metadata.rs  mod.rs  security.rs  validation.rs
