[package]
name = "secnet"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Secure Network Protocol Implementation"

[dependencies]
# CLI argument parsing
clap = "3.1.6"

# Async runtime
tokio = { version = "1.28.0", features = ["full"] }

# Networking
reqwest = { version = "0.11.18", features = ["json"] }

# Serialization
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"

# Cryptography
ed25519-dalek = "1.0.1"
x25519-dalek = "1.2.0"
chacha20poly1305 = "0.9.0"
sha2 = { version = "0.10.6", features = ["std"] }
sha3 = "0.10.6"  # Added this dependency
hmac = "0.12.1"
# Use both rand versions - 0.7 for compatibility with dalek crates
rand = "0.8.5"
rand_07 = { version = "0.7.3", package = "rand" }
base64 = { version = "0.21.0", features = ["std"] }
hex = "0.4.3"
rpassword = "7.2.0"

# Logging
log = "0.4.17"
simplelog = "0.12.1"

# Utilities
uuid = { version = "1.3.3", features = ["v4", "serde"] }
chrono = "0.4.24"
prettytable-rs = "0.10.0"
dirs = "5.0.1"
regex = "1.8.4"   # Added this dependency
lazy_static = "1.4.0"  # Added this dependency

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[[bin]]
name = "secnet"
path = "src/main.rs"