[package]
name = "secnet-server"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Secure Network Protocol Server"

[dependencies]
# Web framework
actix-web = "4.3.1"
actix-cors = "0.6.4"
actix-rt = "2.8.0"

# Async runtime
tokio = { version = "1.28.0", features = ["full"] }

# Database
sqlx = { version = "0.6.3", features = ["runtime-tokio-rustls", "postgres", "uuid", "time", "migrate", "offline"] }

# Utilities
dotenv = "0.15.0"
env_logger = "0.10.0"
log = "0.4.17"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
uuid = { version = "1.3.3", features = ["v4", "serde"] }
chrono = "0.4.24"
futures = "0.3.28"

# Cryptography
sha2 = "0.10.6"
hex = "0.4.3"
base64 = "0.21.0"
rand = "0.8.5"

[lib]
name = "secnet_server"
path = "src/lib.rs"

[[bin]]
name = "secnet-server"
path = "src/main.rs"